# scenario_generation

./: IROS23-Experiment-1.ipynb  IROS23-Experiment-2.ipynb  IROS23-Experiment-3.ipynb  LICENSE  README.md  pyproject.toml
files/exp1/: EXP1_ae_PoseDataset_nrobjects=2_nrsamples=20000SEED=57245.torch  EXP1_initial_PoseDataset_nrobjects=2_nrsamples=20000.pkl  ae_PoseDataset_nrobjects=2_nrsamples=20000.torch  gan_PoseDataset_nrobjects=2_nrsamples=20000.torch
files/exp2/: exp2_new.pkl  newModel_BOOSTED_ae_PoseDataset_nrobjects=4_nrsamples=500000.torch
files/exp3/: EXP1_gan_PoseDataset_nrobjects=3_nrsamples=20000SEED=67940.torch  EXP1_gan_PoseDataset_nrobjects=5_nrsamples=50000SEED=22175.torch  EXP1_gan_PoseDataset_nrobjects=7_nrsamples=50000SEED=56870.torch  newModel_IROSBoosted_EPS=0.05_PoseDataset_nrobjects=5_nrsamples=50000.pkl  newModel_IROS_PoseDataset_nrobjects=3_nrsamples=20000.pkl
files/input/exp1/: aae_experiment1.yml  gan_experiment1.yml
gigalib/: adv_models.py  analysis.py  datasets.py  experiments.py  simulation.py  utils.py
urdf/032_knife/: knife.sdf
urdf/kanel/: kanel.mtl
