[tool.poetry]
name = "supplementarymaterial-iros"
version = "0.1.0"
description = "This is the code base for the IROS 2023 paper 'Generating Scenarios from High-Level Specfications for Object Rearrangement Tasks'"
authors = ["Sanne van Waveren <sanne@gatech.edu>, Christian Pek <c.pek@tudelft.nl>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
importlib-resources = "^5.4.0"
ipykernel = "^6.9.1"
ipython = "^8.1.1"
ipython-genutils = "^0.2.0"
ipywidgets = "^7.6.5"
matplotlib = "^3.5.1"
matplotlib-inline = "^0.1.3"
numpy = "^1.22.3"
pybullet = "^3.2.4"
Pygments = "^2.11.2"
PyYAML = "^6.0"
pyzmq = "^22.3.0"
qtconsole = "^5.2.2"
QtPy = "^2.0.1"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
Shapely = "^1.8.2"
sklearn = "^0.0"
torch = { version = "^1.10.2", python = "<3.10" }
trimesh = "^3.12.0"


[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
